# Affecta

./: .dockerignore  .gitignore  Dockerfile  GENERAL_PLAN.md  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  railway.toml
clinical-rag-agent/: .dockerignore  .env.example  .env.railway.example  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
clinical-rag-agent/clinical_rag_agent/: config.py  main.py
clinical-rag-agent/clinical_rag_agent/agents/: agent_orchestrator.py  base_agent.py  crisis_agent.py  delusion_detection_agent.py  diagnostic_hypothesis_agent.py  graph_rag_agent.py  hallucination_guard_agent.py  intake_agent.py  judge_agent.py  rag_reasoning_agent.py  session_agent.py  treatment_plan_agent.py
clinical-rag-agent/clinical_rag_agent/api/: deps.py  health_routes.py  ingest_routes.py  metrics_routes.py  openai_routes.py  session_routes.py
clinical-rag-agent/clinical_rag_agent/db/: models.py  repositories.py  session.py
clinical-rag-agent/clinical_rag_agent/graph/: clinical_schema.py  entity_linking.py  graph_builder.py  graph_retriever.py  neo4j_client.py
clinical-rag-agent/tests/: test_citation_verification.py  test_claim_extraction.py  test_contradiction_detection.py  test_crisis_agent.py  test_delusion_validation.py  test_diagnostic_certainty.py  test_evidence_alignment.py  test_human_review_api.py  test_openai_api.py  test_orchestrator_therapy_flow.py  test_post_session_analysis_service.py  test_rag_pipeline.py  test_session_note_service.py  test_therapeutic_core.py  test_therapy_state.py  test_therapy_state_update.py
(+103 files in other folders)
